apps/khuedoan/homelab/production/namespace-khuedoan-homelab-production.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
  name: khuedoan-homelab-production
