apps/khuedoan/homelab/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: khuedoan-homelab-production
  labels:
    istio.io/dataplane-mode: ambient
