apps/khuedoan/homelab/production/deployment-docs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: docs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: docs
        istio.io/dataplane-mode: ambient
    spec:
      containers:
      - image: registry.registry.svc.cluster.local/khuedoan/homelab:af374350e163734ba34f641a55ec413cd5e05e45
        name: docs
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 3
          periodSeconds: 3
