apps/khuedoan/homelab/production/docs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: docs
    app.kubernetes.io/managed-by: netamos
    app.kubernetes.io/name: docs
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app.kubernetes.io/instance: docs
