apps/khuedoan/homelab/production/service-docs.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: khuedoan-homelab-production
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app.kubernetes.io/name: docs
