apps/khuedoan/homelab/production/docs-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docs
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: docs
    app.kubernetes.io/managed-by: netamos
    app.kubernetes.io/name: docs
spec:
  hostnames:
  - homelab.khuedoan.com
  - homelab.production.khuedoan.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: docs
      port: 80
