apps/khuedoan/homelab/production/httproute-docs.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docs
  namespace: khuedoan-homelab-production
spec:
  hostnames:
  - homelab.production.khuedoan.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: docs
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
